build/log/idf_py_stdout_output_80755
Command: ninja all
[1/13] Linking C static library esp-idf/espressif__led_strip/libespressif__led_strip.a
[2/13] Linking C static library esp-idf/driver/libdriver.a
[3/13] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/rgb_led.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/rgb_led.c.obj 
/home/stefan/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.5.1-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/stefan/Documents/MyWorkspaceESP32/BathGuardian/build/config -I/home/stefan/Documents/MyWorkspaceESP32/BathGuardian/main -I/home/stefan/esp/v5.5.1/esp-idf/components/newlib/platform_include -I/home/stefan/esp/v5.5.1/esp-idf/components/freertos/config/include -I/home/stefan/esp/v5.5.1/esp-idf/components/freertos/config/include/freertos -I/home/stefan/esp/v5.5.1/esp-idf/components/freertos/config/xtensa/include -I/home/stefan/esp/v5.5.1/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/stefan/esp/v5.5.1/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/stefan/esp/v5.5.1/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/stefan/esp/v5.5.1/esp-idf/components/freertos/esp_additions/include -I/home/stefan/esp/v5.5.1/esp-idf/components/esp_hw_support/include -I/home/stefan/esp/v5.5.1/esp-idf/components/esp_hw_support/include/soc -I/home/stefan/esp/v5.5.1/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/stefan/esp/v5.5.1/esp-idf/components/esp_hw_support/dma/include -I/home/stefan/esp/v5.5.1/esp-idf/components/esp_hw_support/ldo/include -I/home/stefan/esp/v5.5.1/esp-idf/components/esp_hw_support/debug_probe/include -I/home/stefan/esp/v5.5.1/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -I/home/stefan/esp/v5.5.1/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -I/home/stefan/esp/v5.5.1/esp-idf/components/esp_hw_support/power_supply/include -I/home/stefan/esp/v5.5.1/esp-idf/components/esp_hw_support/port/esp32/. -I/home/stefan/esp/v5.5.1/esp-idf/components/esp_hw_support/port/esp32/include -I/home/stefan/esp/v5.5.1/esp-idf/components/heap/include -I/home/stefan/esp/v5.5.1/esp-idf/components/heap/tlsf -I/home/stefan/esp/v5.5.1/esp-idf/components/log/include -I/home/stefan/esp/v5.5.1/esp-idf/components/soc/include -I/home/stefan/esp/v5.5.1/esp-idf/components/soc/esp32 -I/home/stefan/esp/v5.5.1/esp-idf/components/soc/esp32/include -I/home/stefan/esp/v5.5.1/esp-idf/components/soc/esp32/register -I/home/stefan/esp/v5.5.1/esp-idf/components/hal/platform_port/include -I/home/stefan/esp/v5.5.1/esp-idf/components/hal/esp32/include -I/home/stefan/esp/v5.5.1/esp-idf/components/hal/include -I/home/stefan/esp/v5.5.1/esp-idf/components/esp_rom/include -I/home/stefan/esp/v5.5.1/esp-idf/components/esp_rom/esp32/include -I/home/stefan/esp/v5.5.1/esp-idf/components/esp_rom/esp32/include/esp32 -I/home/stefan/esp/v5.5.1/esp-idf/components/esp_rom/esp32 -I/home/stefan/esp/v5.5.1/esp-idf/components/esp_common/include -I/home/stefan/esp/v5.5.1/esp-idf/components/esp_system/include -I/home/stefan/esp/v5.5.1/esp-idf/components/esp_system/port/soc -I/home/stefan/esp/v5.5.1/esp-idf/components/esp_system/port/include/private -I/home/stefan/esp/v5.5.1/esp-idf/components/xtensa/esp32/include -I/home/stefan/esp/v5.5.1/esp-idf/components/xtensa/include -I/home/stefan/esp/v5.5.1/esp-idf/components/xtensa/deprecated_include -I/home/stefan/esp/v5.5.1/esp-idf/components/driver/deprecated -I/home/stefan/esp/v5.5.1/esp-idf/components/driver/i2c/include -I/home/stefan/esp/v5.5.1/esp-idf/components/driver/touch_sensor/include -I/home/stefan/esp/v5.5.1/esp-idf/components/driver/twai/include -I/home/stefan/esp/v5.5.1/esp-idf/components/driver/touch_sensor/esp32/include -I/home/stefan/esp/v5.5.1/esp-idf/components/esp_pm/include -I/home/stefan/esp/v5.5.1/esp-idf/components/esp_ringbuf/include -I/home/stefan/esp/v5.5.1/esp-idf/components/esp_driver_gpio/include -I/home/stefan/esp/v5.5.1/esp-idf/components/esp_driver_pcnt/include -I/home/stefan/esp/v5.5.1/esp-idf/components/esp_driver_gptimer/include -I/home/stefan/esp/v5.5.1/esp-idf/components/esp_driver_spi/include -I/home/stefan/esp/v5.5.1/esp-idf/components/esp_driver_mcpwm/include -I/home/stefan/esp/v5.5.1/esp-idf/components/esp_driver_ana_cmpr/include -I/home/stefan/esp/v5.5.1/esp-idf/components/esp_driver_i2s/include -I/home/stefan/esp/v5.5.1/esp-idf/components/esp_driver_sdmmc/include -I/home/stefan/esp/v5.5.1/esp-idf/components/sdmmc/include -I/home/stefan/esp/v5.5.1/esp-idf/components/esp_driver_sdspi/include -I/home/stefan/esp/v5.5.1/esp-idf/components/esp_driver_sdio/include -I/home/stefan/esp/v5.5.1/esp-idf/components/esp_driver_dac/include -I/home/stefan/esp/v5.5.1/esp-idf/components/esp_driver_rmt/include -I/home/stefan/esp/v5.5.1/esp-idf/components/esp_driver_tsens/include -I/home/stefan/esp/v5.5.1/esp-idf/components/esp_driver_sdm/include -I/home/stefan/esp/v5.5.1/esp-idf/components/esp_driver_i2c/include -I/home/stefan/esp/v5.5.1/esp-idf/components/esp_driver_uart/include -I/home/stefan/esp/v5.5.1/esp-idf/components/esp_driver_ledc/include -I/home/stefan/esp/v5.5.1/esp-idf/components/esp_driver_parlio/include -I/home/stefan/esp/v5.5.1/esp-idf/components/esp_driver_usb_serial_jtag/include -I/home/stefan/esp/v5.5.1/esp-idf/components/esp_driver_twai/include -I/home/stefan/Documents/MyWorkspaceESP32/BathGuardian/managed_components/espressif__led_strip/include -I/home/stefan/Documents/MyWorkspaceESP32/BathGuardian/managed_components/espressif__led_strip/interface -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/stefan/Documents/MyWorkspaceESP32/BathGuardian=. -fmacro-prefix-map=/home/stefan/esp/v5.5.1/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/rgb_led.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/rgb_led.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/rgb_led.c.obj -c /home/stefan/Documents/MyWorkspaceESP32/BathGuardian/main/rgb_led.c
/home/stefan/Documents/MyWorkspaceESP32/BathGuardian/main/rgb_led.c: In function 'rgb_led_pwm_init':
/home/stefan/Documents/MyWorkspaceESP32/BathGuardian/main/rgb_led.c:27:31: error: 'RGB_LED_RED_GPIO' undeclared (first use in this function)
   27 |     ledc_ch[0].gpio         = RGB_LED_RED_GPIO;
      |                               ^~~~~~~~~~~~~~~~
/home/stefan/Documents/MyWorkspaceESP32/BathGuardian/main/rgb_led.c:27:31: note: each undeclared identifier is reported only once for each function it appears in
/home/stefan/Documents/MyWorkspaceESP32/BathGuardian/main/rgb_led.c:33:31: error: 'RGB_LED_GREEN_GPIO' undeclared (first use in this function)
   33 |     ledc_ch[1].gpio         = RGB_LED_GREEN_GPIO;
      |                               ^~~~~~~~~~~~~~~~~~
/home/stefan/Documents/MyWorkspaceESP32/BathGuardian/main/rgb_led.c:39:31: error: 'RGB_LED_BLUE_GPIO' undeclared (first use in this function)
   39 |     ledc_ch[2].gpio         = RGB_LED_BLUE_GPIO;
      |                               ^~~~~~~~~~~~~~~~~
/home/stefan/Documents/MyWorkspaceESP32/BathGuardian/main/rgb_led.c:52:5: error: expected ',' or ';' before 'ledc_timer_config'
   52 |     ledc_timer_config(&ledc_timer);
      |     ^~~~~~~~~~~~~~~~~
/home/stefan/Documents/MyWorkspaceESP32/BathGuardian/main/rgb_led.c:66:9: error: expected ',' or ';' before 'ledc_channel_config'
   66 |         ledc_channel_config(&ledc_channel);
      |         ^~~~~~~~~~~~~~~~~~~
/home/stefan/Documents/MyWorkspaceESP32/BathGuardian/main/rgb_led.c:56:31: warning: unused variable 'ledc_channel' [-Wunused-variable]
   56 |         ledc_channel_config_t ledc_channel =
      |                               ^~~~~~~~~~~~
/home/stefan/Documents/MyWorkspaceESP32/BathGuardian/main/rgb_led.c:44:25: warning: unused variable 'ledc_timer' [-Wunused-variable]
   44 |     ledc_timer_config_t ledc_timer =
      |                         ^~~~~~~~~~
[4/13] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
[5/13] Performing build step for 'bootloader'
[1/1] cd /home/stefan/Documents/MyWorkspaceESP32/BathGuardian/build/bootloader/esp-idf/esptool_py && /home/stefan/.espressif/python_env/idf5.5_py3.10_env/bin/python /home/stefan/esp/v5.5.1/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/stefan/Documents/MyWorkspaceESP32/BathGuardian/build/bootloader/bootloader.bin
Bootloader binary size 0x6680 bytes. 0x980 bytes (8%) free.
ninja: build stopped: subcommand failed.
